--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "moonlight"]
 	path = moonlight
 	url = https://github.com/lainproliant/moonlight
+[submodule "date"]
+	path = date
+	url = https://github.com/HowardHinnant/date
